Front And Bonus

--- a/front + bonus/front/index.html
+++ b/front + bonus/front/index.html
@@ -7,12 +7,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="login">
     <div class="container">
         <h2>Login</h2>
         <input type="text" id="username" placeholder="Username">
         <input type="password" id="password" placeholder="Password">
         <button onclick="login()">Login</button>
+    </div>        
     </div>
+
     <script src="script.js"></script>
 </body>
 </html>
